--- a/src/components/ContactSupport/contactsupport.scss
+++ b/src/components/ContactSupport/contactsupport.scss
@@ -1,5 +1,5 @@
 .support {
-  position: sticky;
+  position: fixed;
   bottom: 30px;
   right: 30px;
   float: right;
