--- a/src/views/MyBookings/mybookings.scss
+++ b/src/views/MyBookings/mybookings.scss
@@ -189,7 +189,6 @@
           &-list {
             position: absolute;
             background-color: white;
-            z-index: -1;
             border: 1px solid #a3a3a3;
             border-top: 0;
             border-bottom-left-radius: 15px;
