--- a/src/views/NewsPage/newspage.scss
+++ b/src/views/NewsPage/newspage.scss
@@ -34,8 +34,6 @@
     font-family: "Gilroy-SemiBold";
     font-size: 30px;
     display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
   }
